src/codegen/tests/snapshots/rusty__codegen__tests__initialization_test__class_struct_initialized_in_function.snap
---
source: src/codegen/tests/initialization_test.rs
expression: function

---
; ModuleID = 'main'
source_filename = "main"

%fb_interface = type { i16 }
%main_interface = type { %fb_interface }
%func_interface = type { %fb_interface, %fb_interface }

@fb__init = global %fb_interface { i16 9 }
@main_instance = global %main_interface { %fb_interface { i16 9 } }

define i32 @func(%func_interface* %0) {
entry:
  %in = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 0
  %x = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 1
  %func = alloca i32, align 4
  %1 = bitcast %fb_interface* %x to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %1, i8* align 1 bitcast (%fb_interface* @fb__init to i8*), i64 ptrtoint (i16* getelementptr (i16, i16* null, i32 1) to i64), i1 false)
  %func_ret = load i32, i32* %func, align 4
  ret i32 %func_ret
}

define void @main(%main_interface* %0) {
entry:
  %fb0 = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %func_instance = alloca %func_interface, align 8
  br label %input

input:                                            ; preds = %entry
  %1 = getelementptr inbounds %func_interface, %func_interface* %func_instance, i32 0, i32 0
  %load_fb0 = load %fb_interface, %fb_interface* %fb0, align 2
  store %fb_interface %load_fb0, %fb_interface* %1, align 2
  br label %call

call:                                             ; preds = %input
  %call1 = call i32 @func(%func_interface* %func_instance)
  br label %output

output:                                           ; preds = %call
  br label %continue

continue:                                         ; preds = %output
  ret void
}

; Function Attrs: argmemonly nofree nosync nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #0

attributes #0 = { argmemonly nofree nosync nounwind willreturn }

