src/codegen/tests/snapshots/rusty__codegen__tests__initialization_test__expression_list_as_array_initilization.snap
---
source: src/codegen/tests/initialization_test.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@arr = global [5 x i16] [i16 1, i16 2, i16 3]
@b_exp = global [6 x i32] [i32 4, i32 6, i32 6, i32 10]
@str = global [4 x [81 x i8]] [[81 x i8] c"first\00", [81 x i8] c"second\00"]

